auth middleware response fixed, login returns id and name with token in result
